--- a/simple-ecommerce/simple-ecommerce.csproj
+++ b/simple-ecommerce/simple-ecommerce.csproj
@@ -12,4 +12,8 @@
     <ProjectReference Include="..\ECommerce.Infrastructure\ECommerce.Infrastructure.csproj" />
   </ItemGroup>
 
+  <ItemGroup>
+    <Folder Include="wwwroot\images\Products\" />
+  </ItemGroup>
+
 </Project>
